# rose

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: vcpkg.cmake
shaders/: wireframe.frag  wireframe.vert
source/: CMakeLists.txt  main.cpp
source/core/: CMakeLists.txt  rose_context.cpp  rose_context.hpp  shader_program.cpp  shader_program.hpp  window_manager.cpp  window_manager.hpp
source/opengl/: CMakeLists.txt  gl_program.cpp  gl_program.hpp  gl_shader.cpp  gl_shader.hpp
source/utility/: singleton.hpp
